[project]
name = "caringcaribou"
authors = [{name = "Kasper Karlsson"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
keywords = ["automotive", "security", "CAN", "automotive protocols", "fuzzing"]